fix(kit): `Prompt` wrap buttons to the new line if they do not fit (#4443)

--- a/projects/kit/components/prompt/prompt.style.less
+++ b/projects/kit/components/prompt/prompt.style.less
@@ -1,18 +1,19 @@
 @import 'taiga-ui-local';
 
 .t-content:not(:empty) {
-    margin-bottom: 1.25rem;
+    margin-bottom: 0.875rem;
 }
 
 .t-buttons {
     display: flex;
     justify-content: flex-end;
-    margin-top: 0.75rem;
-    width: 100%;
+    flex-wrap: wrap;
+    margin: 0.375rem -0.375rem -0.375rem;
 }
 
-.t-button:last-child {
-    margin-left: 0.75rem;
+.t-button {
+    margin: 0.375rem;
+    white-space: nowrap;
 }
 
 :host-context(tui-root._mobile) {
